# memos-rss

./: .env.example  .gitignore  Cargo.toml  Dockerfile  README.md  compose.yml  package.json  rss.toml  rss.toml.example  tsconfig.json
.github/workflows/: main.yml
cli/: git-commit-build.ts
src/: commands.ts  config.rs  discord.rs  index.ts  main.rs  rss.rs  storage.rs
src/lib/: config.ts  rss.ts  storage.ts
src/type/: toml.d.ts  types.ts
