[package]
name = "memos-rss-rs"
version = "0.1.0"
edition = "2024"

[dependencies]
serenity = { version = "0.12", default-features = false, features = ["client", "gateway", "rustls_backend", "model", "standard_framework"] }
tokio = { version = "1", features = ["full"] }
rss = "2.0"
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
htmd = "0.1"
anyhow = "1.0"
chrono = "0.4"
sled = "0.34"
dotenvy = "0.15"
