[package]
name = "memos-rss-rs"
version = "0.1.0"
edition = "2024"

[dependencies]
serenity = { version = "0.12", default-features = false, features = ["full", "rustls_backend"] }
tokio = { version = "1", features = ["full"] }
feed-rs = "2"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
htmd = "0.1"
anyhow = "1.0"
chrono = "0.4"
sled = "0.34"
dotenvy = "0.15"
